Fixed some renaming

--- a/content/events/sims-2015.md
+++ b/content/events/sims-2015.md
@@ -3,20 +3,20 @@ title: "SIMS 2015 Conference"
 ---
 <h2 style="text-align: center;"><span style="font-size: 18pt;"><a href="http://www.scansims.org/">The 56th Conference on Simulation and Modelling (SIMS 56)</a></span></h2>
 <h2 style="text-align: center;"><br />Call for papers<br />7-9 October 2015 <br /><span style="font-size: 14pt;">“Modelling, Simulation and Optimization”</span></h2>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="images/M_images/SIMS15/sims2015.jpg" alt="sims2015" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/M_images/SIMS15/sims2015.jpg" alt="sims2015" /></p>
 <table style="height: 279px; width: 692px;" border="0" align="center">
 <tbody>
 <tr>
-<td><img style="display: block; margin-left: auto; margin-right: auto;" src="images/M_images/SIMS15/nonSo.jpg" alt="nonSo" /></td>
-<td><a href="http://www.liu.se/"><img style="display: block; margin-left: auto; margin-right: auto;" src="images/M_images/SIMS15/linkoping.png" alt="linkoping" /></a></td>
+<td><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/M_images/SIMS15/nonSo.jpg" alt="nonSo" /></td>
+<td><a href="http://www.liu.se/"><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/M_images/SIMS15/linkoping.png" alt="linkoping" /></a></td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
 <p><strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><strong style="line-height: 19.8px;"><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span style="color: #ff0000;">NEW!</span>&nbsp;-&nbsp;<a href="images/M_images/SIMS15/Sims2015Program.pdf">Final Program&nbsp;</a>&nbsp;(printable version)</span></strong></span></span></span></strong></p>
 <p><strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><strong style="line-height: 19.8px;"><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span style="color: #ff0000;">NEW!&nbsp;<strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><strong style="line-height: 19.8px;"><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;">- <a href="http://easychair.org/smart-program/SIMS56/index.html">Online program available</a><a href="images/M_images/SIMS15/Sims2015Program.pdf"><br /></a></span></strong></span></span></span></strong></span></span></strong></span></span></span></strong></p>
-<p><strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><a href="index.php?option=com_content&amp;view=article&amp;id=163:sims-tutorials&amp;catid=2&amp;Itemid=273">Tutorial Descriptions</a></span></span></span></strong></p>
-<p><strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><a href="index.php?option=com_content&amp;view=article&amp;id=164:sims-2015-invited-talks&amp;catid=2&amp;Itemid=273">Invited Taks</a>&nbsp;<a href="/images/M_images/SIMS15/GrantOfCopyrightLicense.pdf"><br /></a></span></span></span></strong></p>
+<p><strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><a href="../sims-2015-tutorials">Tutorial Descriptions</a></span></span></span></strong></p>
+<p><strong><span style="font-family: 'times new roman', times; font-size: 14pt; color: #000080;"><span color="#800080" face="Calibri, sans-serif" style="color: #800080; font-family: Calibri, sans-serif;"><span style="line-height: normal; font-size: 15px;"><a href="../sims-2015-invited-talks">Invited Taks</a>&nbsp;<a href="/images/M_images/SIMS15/GrantOfCopyrightLicense.pdf"><br /></a></span></span></span></strong></p>
 <p><strong><span style="font-family: times new roman,times; font-size: 14pt; color: #000080;">SIMS 56</span></strong></p>
 <p><span style="font-family: times new roman,times; font-size: 12pt;">In 2015, the 56th Conference on Simulation and Modelling will be held in Linköping, Sweden. Linköping is one of Sweden’s fastest growing cities. The population is constantly increasing and will soon surpass 150 000 inhabitants. It is currently Sweden’s fifth largest city and a part of the expansive region Twin Cities of Sweden. Linköping has long been characterized by world-class high technology in the fields of aviation, IT and the environment. There is a strong force of innovation especially in Mjärdevi Science Park—one of Europe’s leading technology parks, and at the highly ranked university, which stands for excellence and entrepreneurship.</span></p>
 <p><span style="font-family: times new roman,times; font-size: 12pt;">The SIMS 56 will cover broad aspects of simulation, modelling and optimization. The ambition of the SIMS 56 is to bring the field of modeling and simulation technics of energy systems applied to the general public as a contributing technology for efficient and sustainable energy systems. The scientific program will include technical sessions with submitted and invited papers, and might be open for poster sessions and vendor demonstrations. The conference organization will try to make a number of scholarships available for participation of Ph.D. students in the conference; therefore Ph.D. Students are encouraged to contribute with papers according to the conference themes. The conference papers will be published in LiU Electronic Press, which is an open access archive.</span></p>
