--- a/content/events/sims-2015.md
+++ b/content/events/sims-2015.md
@@ -3,12 +3,12 @@ title: "SIMS 2015 Conference"
 ---
 <h2 style="text-align: center;"><span style="font-size: 18pt;"><a href="http://www.scansims.org/">The 56th Conference on Simulation and Modelling (SIMS 56)</a></span></h2>
 <h2 style="text-align: center;"><br />Call for papers<br />7-9 October 2015 <br /><span style="font-size: 14pt;">“Modelling, Simulation and Optimization”</span></h2>
-<p><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/M_images/SIMS15/sims2015.jpg" alt="sims2015" /></p>
+<p><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/sims2015.jpg" alt="sims2015" /></p>
 <table style="height: 279px; width: 692px;" border="0" align="center">
 <tbody>
 <tr>
-<td><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/M_images/SIMS15/nonSo.jpg" alt="nonSo" /></td>
-<td><a href="http://www.liu.se/"><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/M_images/SIMS15/linkoping.png" alt="linkoping" /></a></td>
+<td><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/nonSo.jpg" alt="nonSo" /></td>
+<td><a href="http://www.liu.se/"><img style="display: block; margin-left: auto; margin-right: auto;" src="/images/linkoping.png" alt="linkoping" /></a></td>
 </tr>
 </tbody>
 </table>
