Made the navbar for OM/MODPROD workshops more compact

--- a/content/events/openmodelica-workshop/2010.md
+++ b/content/events/openmodelica-workshop/2010.md
@@ -1,5 +1,6 @@
 ---
-title: "Final program OpenModelica Workshop 2010"
+title: "OpenModelica 2010"
+date: 2010-02-08
 ---
 <h3 style="text-align: center;">Annual OpenModelica Workshop 2010, February 8</h3>
 <h3 style="text-align: center;">Supported by<br />Open Source Modelica Consortium (OSMC) and Linköping University (LiU)</h3>
