--- a/content/events/openmodelica-workshop/2011.md
+++ b/content/events/openmodelica-workshop/2011.md
@@ -1,5 +1,6 @@
 ---
-title: "Final Program OpenModelica Workshop 2011"
+title: "OpenModelica 2011"
+date: 20111-02-07
 ---
 <h3 style="text-align: center;">Annual OpenModelica Workshop 2011, February 7</h3>
 <h3 style="text-align: center;">Supported by<br />Open Source Modelica Consortium (OSMC) and Linköping University (LiU)</h3>
