--- a/content/events/openmodelica-workshop/2023.md
+++ b/content/events/openmodelica-workshop/2023.md
@@ -1,5 +1,5 @@
 ---
-title: "OpenModelica Annual Workshop 2023"
+title: "OpenModelica 2023"
 publishDate: 2022-11-25
 date: 2023-02-06
 tags: [news]
