Fix some more links

--- a/content/events/openmodelica-workshop/2010.md
+++ b/content/events/openmodelica-workshop/2010.md
@@ -31,7 +31,7 @@ date: 2010-02-08
 <p style="margin-top: 0.19in; margin-bottom: 0.04in;"><strong>15.00-15.30 </strong><strong>Jens Frenkel </strong><strong>(TU-Dresden) </strong><strong>and Timo (Penndorf Putzmeister Concrete Pumps GmbH)</strong></p>
 <p style="margin-bottom: 0in;">A Study of OpenModelica in realtime simulation for virtual reality environments <a href="https://www.ida.liu.se/~petfr27/OpenModelica2010talks/100208-Talk9-penndorf_frenkel-OpenModelica-Realtimesimulation.pdf"><strong>pdf</strong></a></p>
 <p style="margin-top: 0.19in; margin-bottom: 0.04in;"><strong>15.30-16.00 </strong><strong>Per Östlund (Linköping University)</strong></p>
-<p style="margin-bottom: 0in;">Parallel Simulation of Modelica Models on the NVIDIA/CUDA Architecture <a href="https://www.ida.liu.se/~petfr27/OpenModelica2010talks/100208-Talk10-Per-%d6stlund-Parallel-Modelica-on-Nvidia.pdf"><strong>pdf</strong></a></p>
+<p style="margin-bottom: 0in;">Parallel Simulation of Modelica Models on the NVIDIA/CUDA Architecture <a href="https://www.ida.liu.se/~petfr27/OpenModelica2010talks/100208-Talk10-Per-Östlund-Parallel-Modelica-on-Nvidia.pdf"><strong>pdf</strong></a></p>
 <p style="margin-top: 0.19in; margin-bottom: 0.04in;"><strong>16.00-17.00 Panel Discussion</strong></p>
 <p style="margin-bottom: 0in;">Future Directions of OpenModelica <a href="https://www.ida.liu.se/~petfr27/OpenModelica2010talks/100208-Talk11-Discussion-notes-Future-of-OpenModelica.txt"><strong>pdf</strong></a></p>
 <p style="margin-top: 0.19in; margin-bottom: 0in;"><strong>17.00-18.00 Open Source Modelica Consortium Annual Statutory Meeting</strong></p>
