add the last presentations to the OM Workshop 2024

--- a/content/events/openmodelica-workshop/2024.md
+++ b/content/events/openmodelica-workshop/2024.md
@@ -36,7 +36,7 @@ tags: [news]
 ### Session Chair: Adrian Pop (Linköping University)
 #### 10:50-11:15 Jan Westphal, Arne Speerforck (Technical University of Hamburg -- TUHH, Germany)
 
-- [Modelling larger-scale district heating networks]()
+- [Modelling larger-scale district heating networks](/images/M_images/OpenModelicaWorkshop_2024/04_240205_Speerforck_OM.pdf)
 
 #### 11:15-11:40 Joy El Feghali, Gautier Bureau, Julien De Sloovere, Baptiste Letellier, Ian Menezes, Florentine Rosiere and Marco Chiaramello (RTE Réseau de transport d'électricité, France)
 
@@ -66,7 +66,7 @@ tags: [news]
 ### Session Chair: Gerhard Schmitz (Hamburg University of Technology, Germany)
 #### 15:05-15:30 John Tinnerholm (Linköping University)
 
-- [Modelica in the Julia Environment: Latest Developments and Prospects]()
+- [Modelica in the Julia Environment: Latest Developments and Prospects](/images/M_images/OpenModelicaWorkshop_2024/10_ModelicaWorkshop2024Working.pdf)
 
 #### 15:30-15:55 Lena Buffoni (Linköping University)
 
